--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+  height: 100vh;
+  background: #E4E9F7;
+  font-family: "DM Sans";
+}
