Tried to add description

--- a/src/app/editsetion/createcategories/createcategories.component.html
+++ b/src/app/editsetion/createcategories/createcategories.component.html
@@ -1,8 +1,8 @@
 <form>
 <div class="form-group">
   <label for="exampleFormControlTextarea1"></label>
-  <textarea class="w-75 form-control" id="exampleFormControlTextarea1" rows="20"></textarea>
+  <textarea class="w-75 form-control" id="exampleFormControlTextarea1" rows="20" #data></textarea>
   <br>
-  <button type="button" class="btn btn-success">Save</button>
+  <button type="button" class="btn btn-success" (click)="description(data)">Save</button>
 </div>
 </form>
