--- a/src/app/editsetion/createcategories/createcategories.component.html
+++ b/src/app/editsetion/createcategories/createcategories.component.html
@@ -1,8 +1,10 @@
 <form>
 <div class="form-group">
   <label for="exampleFormControlTextarea1"></label>
-  <textarea class="w-75 form-control" id="exampleFormControlTextarea1" rows="20" #data></textarea>
+  <textarea  class="w-75 form-control" id="exampleFormControlTextarea1" rows="20" #data [disabled]="!editMode">{{ notes.selectedNoteValue.description }}</textarea>
   <br>
-  <button type="button" class="btn btn-success" (click)="description(data)">Save</button>
+  <button type="button" class="btn btn-success" (click)="description(data.value)">Save</button>
+  <button type="button" class="btn btn-warning" (click)="enableEdit()">Edit</button>
+
 </div>
 </form>
