--- a/src/app/sidebar/categories/categories.component.html
+++ b/src/app/sidebar/categories/categories.component.html
@@ -7,5 +7,5 @@
   </div>
 </div>
 <ul class="list-group">
-  <li class="link-primary list-group-item" *ngFor="let i of list"><a href="#" (click)="selectedOne(i)">{{ i }}</a></li>
+  <li class="link-primary list-group-item" *ngFor="let i of list"><a href="#" (click)="selectedOne(i)">{{ i.name }}</a></li>
 </ul>
