--- a/src/app/editsetion/editsetion.component.html
+++ b/src/app/editsetion/editsetion.component.html
@@ -1,2 +1,2 @@
-<h1>{{ selectedNotes }}</h1>
+<h1>{{ selectedNotes.name }}</h1>
 <app-createcategories *ngIf="selectedNotes"></app-createcategories>
